finished styling, added hover and focus states on interactive elements, fixed layout issues

--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -10,4 +10,10 @@ footer a {
     color: $darkBackground;
     font-family: $bodyFont;
     font-weight: 400;
+    transition: all 0.2s;
+}
+
+footer a:hover,
+footer a:focus {
+    color: rgb(194, 52, 0);
 }
